# embedded-unit-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  dummy_data_gen.py  main.py  subdir.mk  test_app
mock/: mock_external_communication.c  mock_external_communication.h  mock_gpio.c  mock_gpio.h  mock_interrupt.c  mock_interrupt.h  mock_mailbox.c  mock_mailbox.h  mock_registers.c  mock_registers.h  mock_shared_memory.c  mock_shared_memory.h  mock_system_monitor.c  mock_system_monitor.h  mock_uart.c  mock_uart.h
src/: main.c
unit_tests/: CMakeLists.txt  dummy_data.h  external_communication.c  external_communication.h  gpio.c  gpio.h  interrupt.h  mailbox.h  registers.c  registers.h  shared_memory.c  shared_memory.h  subdir.mk  system_monitor.c  system_monitor.h  test_external_communication.c  test_gpio.c  test_registers.c  test_shared_memory.c  test_system_monitor.c  test_uart.c  uart.c  unit_test.c  unit_test.h
unit_tests/external_communication/: external_communication.c  subdir.mk
unit_tests/gpio/: gpio.c  subdir.mk
unit_tests/interrupt/: interrupt.c  subdir.mk
unit_tests/mailbox/: mailbox.c  subdir.mk
unit_tests/registers/: registers.c  subdir.mk
unit_tests/shared_memory/: subdir.mk
unit_tests/system_monitor/: subdir.mk
unit_tests/uart/: subdir.mk  uart.c  uart.h
